# super-cli

./: LICENSE  Makefile  pyproject.toml
docs/: index.md
super/: cli.py  standup.py
